--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 #contactMe {
     background-color: #2B3869;
     padding: 0 5px;
+    transition: 0.2s;
 }
 
 #contactMe:hover {
@@ -232,3 +233,64 @@
 #project3 p {
     color: #CDCDCD;
 }
+
+/* CONTACT ME SECTION */
+
+#CTtxt h1 {
+    text-align: center;
+    padding: 30px 0;
+    color: white;
+}
+
+#contactMeSection {
+    background-color: #22263A;
+    overflow: hidden;
+    display: flex;
+    height: fit-content;
+    flex-direction: column;
+}
+
+#CTmainContainer {
+    width: 40%;
+    margin: 40px auto;                                                            
+}
+
+#CTmainContainer input {
+    display: block;
+    width: calc(100% - 60px);
+    margin: 20px 20px 20px;
+    outline: none;
+    padding: 10px;
+    background-color: #252C46;
+    border: none;
+    color: white;
+}
+
+#CTmainContainer #submitBTN {
+    width: calc(100% - 40px);
+    margin: 0 20px 20px;
+    padding: 10px;
+    background-color: #2B3869;
+    border: none;
+    color: white;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+#CTmainContainer #submitBTN:hover {
+    background-color: #354a96;
+}
+
+#CTmainContainer #CTmessage {
+    height: 100px;
+    width: calc(100% - 50px);
+    margin: 0 20px 20px;
+    padding: 5px;
+    border: none;
+    outline: none;
+    background-color: #252C46;
+    color: white;
+    resize: none;
+    font-size: 14px;
+}
+
